<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">1448892845363751</string>
    <string name="app_name">Insights</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pioneer_packages">Pioneer Packages</string>
    <string name="lifestyle_events">Lifestyle events</string>
    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>
    <string name="title_activity_view_events">ViewEventsActivity</string>
    <string name="read_aloud">Read_aloud</string>
    <string name="translate">Translate</string>
    <string name="action_search">Search</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="share">Share</string>
    <string name="title_activity_nearest_clinc">NearestClinic</string>
    <string name="title_activity_view__clinic">View_Clinic</string>
    <string name="Appointment">Book Appointment</string>
    <string name="title_activity_check_eligibilty">Check Eligibilty</string>
    <string name="check_eligibility">Check Eligibility</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_booking_appt"> Book Appointment</string>
    <string name="title_activity_view_pioneer_package">View Pioneer Package </string>
    <string name="title_activity_view_pioneer_packages">ViewPioneerPackagesActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_view_event_search_results">Event Results Found</string>
    <string name="title_activity_login">Login</string>
    <string name="nric">Enter your NRIC</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="sign_up">Sign Up</string>
    <string name="selectdate">Select Date </string>
    <string name="selecttime">Select Timing </string>

    <string-array name="language">
        <item name="English">English</item>
        <item name="Chinese">Chinese</item>
    </string-array>

    <string name="title_activity_arview">ARViewActivity</string>
    <string name="arView">AR View</string>
    <string name="google_places_api_key">AIzaSyC5mTsDhjayzCqXH87ggEYsfswR1cStfX8</string>
    <string name="title_activity_get_directions">Get Directions</string>

</resources>
