<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fypj.insightsLocal.ui_logic.ViewClinicActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/Appointment"
        android:title="@string/Appointment"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/iappointment"
        />

    <item android:id="@+id/arView"
        android:title="@string/arView"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_directions"
        />
</menu>
