<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_logo"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/et_nric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:fontFamily="sans-serif-light"
        android:foreground="@android:color/black"
        android:hint="@string/nric"
        android:layout_above="@+id/et_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </EditText>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-light"
        android:foreground="@android:color/black"
        android:hint="@string/password"
        android:layout_above="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/login"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/layout_inner_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:id="@+id/layout_inner_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/actionBarBackgroundColor"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1.0"
            android:textColor="@android:color/white"
            android:background="@color/actionBarBackgroundColor"
            android:text="@string/forget_password" />
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textColor="@android:color/white"
            android:background="@color/actionBarBackgroundColor"
            android:text="@string/sign_up" />
    </LinearLayout>
</RelativeLayout>